Fix z-index on menu

--- a/assets/src/scss/components/_site-navigation.scss
+++ b/assets/src/scss/components/_site-navigation.scss
@@ -67,7 +67,7 @@
             left: 0;
             width: 100%;
             height: 100vh;
-            z-index: 10;
+            z-index: 101;
         }
 
     }
